Added minor features

--- a/src/components/AppHeader/AppHeader.module.scss
+++ b/src/components/AppHeader/AppHeader.module.scss
@@ -5,4 +5,28 @@
   top: 0;
   left: 0;
   box-sizing: border-box;
+
+  .background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #121212;
+    opacity: 0;
+
+    &.colored {
+      &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        background-color: rgba(0, 0, 0, 0.6);
+      }
+    }
+  }
 }
