--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 @import "assets/styles/icons";
 @import "../node_modules/overlayscrollbars/styles/overlayscrollbars.min.css";
 @import "assets/styles/scrollbar";
+@import "../node_modules/tippy.js/dist/tippy.css";
 
 body {
   line-height: 1.6;
