--- a/src/modules/artist/Artist.module.scss
+++ b/src/modules/artist/Artist.module.scss
@@ -1,14 +1,11 @@
 .artist {
 
   .artistBody {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
     padding: 16px;
     position: relative;
     z-index: 1;
-
-    .artistControls {
-      margin-bottom: 24px;
-    }
-
-
   }
 }
