--- a/src/components/EntityCard/EntityCard.module.scss
+++ b/src/components/EntityCard/EntityCard.module.scss
@@ -17,6 +17,7 @@
     overflow-x: hidden;
     box-shadow: 0 8px 24px rgba(0,0,0,0.5);
     margin-bottom: 1rem;
+    background-color: #333;
 
     &.isRounded {
       border-radius: 50%;
