--- a/src/components/TrackList/TrackList.module.scss
+++ b/src/components/TrackList/TrackList.module.scss
@@ -35,9 +35,6 @@
   }
 
   .listHeader {
-    position: sticky;
-    z-index: 1;
-    top: 64px;
     margin-bottom: 16px;
     border-bottom: 1px solid hsla(0,0%,100%,.1);
     height: 36px;
@@ -51,6 +48,9 @@
     }
 
     &.fixed {
+      position: sticky;
+      z-index: 1;
+      top: 64px;
       background-color: #1a1a1a;
       margin-left: -24px;
       margin-right: -24px;
@@ -204,6 +204,48 @@
             fill: #a7a7a7;
           }
         }
+      }
+    }
+  }
+
+  .trackItemShimmering {
+    height: 56px;
+
+    .colNumber {
+      div {
+        width: 16px;
+        height: 16px;
+        border-radius: 4px;
+        background-color: #282828;
+        background-position-x: -12px;
+      }
+    }
+
+    .colTitle {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      gap: 12px;
+
+      & > div {
+        height: 12px;
+        border-radius: 4px;
+        background-color: #282828;
+        width: 130px;
+
+        &:last-child {
+          width: 120px;
+        }
+      }
+    }
+
+    .colDuration {
+      div {
+        width: 40px;
+        height: 12px;
+        border-radius: 4px;
+        background-color: #282828;
       }
     }
   }
