--- a/src/modules/artist/discography/DiscographyHeader/DiscographyHeader.module.scss
+++ b/src/modules/artist/discography/DiscographyHeader/DiscographyHeader.module.scss
@@ -2,6 +2,16 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0 -24px 16px;
+  padding: 0 24px;
+  position: sticky;
+  top: 64px;
+  z-index: 1;
+
+  &.scrolled {
+    background-color: #121212;
+    box-shadow: 0 6px 10px rgba(0,0,0,.6);
+  }
 
   .title {
     font-size: 1.5rem;
