--- a/src/components/EntityCard/EntityCard.module.scss
+++ b/src/components/EntityCard/EntityCard.module.scss
@@ -5,30 +5,45 @@
   cursor: pointer;
   transition: background-color 0.3s;
 
-  &:hover {
-    background-color: #282828;
-  }
-
   .imageContainer {
     width: 100%;
-    padding-top: 100%;
     position: relative;
-    border-radius: 6px;
-    overflow-x: hidden;
-    box-shadow: 0 8px 24px rgba(0,0,0,0.5);
     margin-bottom: 1rem;
-    background-color: #333;
 
-    &.isRounded {
-      border-radius: 50%;
+    .imageMask {
+      width: 100%;
+      padding-top: 100%;
+      position: relative;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.5);
+      border-radius: 6px;
+      overflow-x: hidden;
+      background-color: #333;
+
+      &.rounded {
+        border-radius: 50%;
+      }
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: fill;
+        object-position: center;
+      }
     }
 
-    img {
+    .buttonContainer {
+      --play-button-size: 48px;
+
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      z-index: 1;
+      bottom: 8px;
+      right: 8px;
+      transform: translateY(15%);
+      opacity: 0;
+      transition: 0.3s ease;
     }
   }
 
@@ -51,6 +66,17 @@
       font-weight: 400;
       color: #a7a7a7;
       line-height: 1;
+    }
+  }
+
+  &:hover {
+    background-color: #282828;
+
+    .imageContainer {
+      .buttonContainer {
+        transform: translateY(0);
+        opacity: 1;
+      }
     }
   }
 }
