--- a/src/modules/artist/Artist.module.scss
+++ b/src/modules/artist/Artist.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-    padding: 16px;
+    padding: 16px 24px;
     position: relative;
     z-index: 1;
   }
