--- a/src/components/AppHeader/HeaderLoggedIn/HeaderLoggedIn.module.scss
+++ b/src/components/AppHeader/HeaderLoggedIn/HeaderLoggedIn.module.scss
@@ -1,7 +1,7 @@
 .headerLoggedIn {
   position: relative;
   z-index: 1;
-  padding: 16px;
+  padding: 16px 24px;
   display: flex;
   align-items: center;
   justify-content: space-between;
