Added album type filter menu on discography page

--- a/src/components/ContextMenu/ContextMenu.module.scss
+++ b/src/components/ContextMenu/ContextMenu.module.scss
@@ -42,6 +42,10 @@
         line-height: 1.15;
         border-radius: 2px;
 
+        &.active {
+          color: #1ed760 !important;
+        }
+
         &:hover {
           background-color: hsla(0,0%,100%,.1);
         }
