--- a/src/modules/artist/discography/DiscographyHeader/DiscographyHeader.module.scss
+++ b/src/modules/artist/discography/DiscographyHeader/DiscographyHeader.module.scss
@@ -20,6 +20,11 @@
   }
 
   .controls {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 8px;
+
     .layouts {
       display: flex;
       align-items: center;
