--- a/src/components/ContextMenu/ContextMenu.module.scss
+++ b/src/components/ContextMenu/ContextMenu.module.scss
@@ -41,6 +41,15 @@
         font-size: 0.875rem;
         line-height: 1.15;
         border-radius: 2px;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+
+        svg {
+          fill: #a7a7a7;
+          width: 16px;
+          height: 16px;
+        }
 
         &.active {
           color: #1ed760 !important;
