--- a/src/modules/playlist/Playlist.module.scss
+++ b/src/modules/playlist/Playlist.module.scss
@@ -9,6 +9,10 @@
       align-items: center;
       margin-bottom: 24px;
       gap: 24px;
+
+      .viewSelector {
+        margin-left: auto;
+      }
     }
   }
 }
