--- a/src/components/TrackList/TrackList.module.scss
+++ b/src/components/TrackList/TrackList.module.scss
@@ -1,10 +1,18 @@
 .trackList {
   &.playlist {
     --columns: [index] 16px [first] 6fr [var1] 4fr [var2] 3fr [last] minmax(120px,1fr);
+
+    &.compact {
+      --columns: [index] 16px [first] 6fr [var1] 4fr [var2] 3fr [var3] minmax(120px,2fr) [last] minmax(120px,1fr);
+    }
   }
 
   &.album {
     --columns: [index] 16px [first] 4fr [last] minmax(120px,1fr);
+
+    &.compact {
+      --columns: [index] 16px [first] 4fr [var1] 2fr [last] minmax(120px,1fr);
+    }
   }
 
   &.topTracks {
@@ -204,6 +212,14 @@
             fill: #a7a7a7;
           }
         }
+      }
+    }
+  }
+
+  &.compact {
+    .listBody {
+      .trackItem {
+        height: 32px;
       }
     }
   }
