Added artist follow button and context menu

--- a/src/modules/album/Album.module.scss
+++ b/src/modules/album/Album.module.scss
@@ -9,6 +9,10 @@
       display: flex;
       align-items: center;
       gap: 24px;
+
+      .viewSelector {
+        margin-left: auto;
+      }
     }
 
     .albumInfo {
