--- a/src/modules/artist/Artist.module.scss
+++ b/src/modules/artist/Artist.module.scss
@@ -7,5 +7,11 @@
     padding: 16px 24px;
     position: relative;
     z-index: 1;
+
+    .artistControls {
+      display: flex;
+      align-items: center;
+      gap: 24px;
+    }
   }
 }
