--- a/src/modules/artist/components/TopTracks/TopTracks.module.scss
+++ b/src/modules/artist/components/TopTracks/TopTracks.module.scss
@@ -12,6 +12,7 @@
     font-size: 0.875rem;
     color: hsla(0,0%,100%,.7);
     font-weight: 700;
+    cursor: pointer;
 
     &:hover {
       color: white;
