Added sidebar list, compact and grid views

--- a/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarList.module.scss
+++ b/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarList.module.scss
@@ -9,5 +9,11 @@
 
   .scrollContent {
     padding: 0 8px 8px;
+
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
   }
 }
