--- a/src/components/EntityCard/EntityCard.module.scss
+++ b/src/components/EntityCard/EntityCard.module.scss
@@ -29,7 +29,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        object-fit: fill;
+        object-fit: cover;
         object-position: center;
       }
     }
