--- a/src/index.scss
+++ b/src/index.scss
@@ -46,6 +46,8 @@ button {
 html {
   --play-button-size: 56px;
   --play-button-icon-size: 24px;
+  --play-button-color: #1ed760;
+  --play-button-highlight-color: #1fdf64;
 
   --like-button-size: 32px;
 }
