--- a/src/components/AppPlayer/PlayerLeftSection/PlayerLeftSection.module.scss
+++ b/src/components/AppPlayer/PlayerLeftSection/PlayerLeftSection.module.scss
@@ -2,6 +2,8 @@
   padding-left: 8px;
   display: flex;
   align-items: center;
+  width: 30%;
+  min-width: 180px;
 
   .imageContainer {
     width: 56px;
@@ -22,13 +24,17 @@
   .infoContainer {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 
     .name {
       font-size: 0.875rem;
       color: white;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
 
-    .album {
+    .artist {
       font-size: 0.6875rem;
       color: #a7a7a7;
     }
