--- a/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarGridView/SidebarGridView.module.scss
+++ b/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarGridView/SidebarGridView.module.scss
@@ -7,12 +7,14 @@
 
   .item {
     padding: 12px;
-    border-radius: 8px;
+    border-radius: 6px;
+    position: relative;
 
     .imageContainer {
       width: 100%;
       padding-top: 100%;
       position: relative;
+      z-index: 1;
 
       & > div {
         position: absolute;
@@ -32,6 +34,8 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+      position: relative;
+      z-index: 1;
     }
 
     .subtitle {
@@ -42,6 +46,31 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+      position: relative;
+      z-index: 1;
+    }
+
+    &:after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      transform: scale(0.85);
+      transform-origin: center;
+      opacity: 0;
+      z-index: 0;
+      transition: all 0.2s;
+      background-color: #1a1a1a;
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 6px;
+    }
+
+    &:hover {
+      &:after {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
   }
 }
