--- a/src/components/Common/EntityImage/EntityImage.module.scss
+++ b/src/components/Common/EntityImage/EntityImage.module.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0 8px 24px rgba(0,0,0,.5);
 
   &.rounded {
     border-radius: 50%;
