--- a/src/modules/search/components/SearchResultCard/SearchResultCard.module.scss
+++ b/src/modules/search/components/SearchResultCard/SearchResultCard.module.scss
@@ -16,6 +16,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    cursor: pointer;
 
     .imageContainer {
       width: 92px;
