--- a/src/modules/search/components/SearchInput/SearchInput.module.scss
+++ b/src/modules/search/components/SearchInput/SearchInput.module.scss
@@ -5,7 +5,7 @@
   width: 80%;
   max-width: 364px;
 
-  .iconContainer {
+  .searchIconContainer {
     position: absolute;
     top: 50%;
     left: 12px;
@@ -16,6 +16,20 @@
       width: 16px;
       height: 16px;
       fill: #bfbfbf;
+    }
+  }
+
+  .buttonClear {
+    position: absolute;
+    top: 50%;
+    right: 12px;
+    transform: translateY(-50%);
+    font-size: 0;
+
+    svg {
+      width: 12px;
+      height: 12px;
+      fill: white;
     }
   }
 
