--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,7 @@ code {
     monospace;
 }
 
-#root, body, html {
+#root, body, html, #layout {
   width: 100%;
   height: 100%;
   background-color: #000;
