--- a/src/components/EntityHeaderWrapper/EntityHeaderWrapper.module.scss
+++ b/src/components/EntityHeaderWrapper/EntityHeaderWrapper.module.scss
@@ -6,6 +6,38 @@
   max-height: 400px;
   min-height: 340px;
 
+  .imageContainer {
+    width: 232px;
+    height: 232px;
+    margin-right: 16px;
+    box-shadow: 0 4px 60px rgba(0,0,0,.5);
+    position: relative;
+    z-index: 1;
+    flex-shrink: 0;
+    border-radius: 50%;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-position: center;
+      object-fit: cover;
+    }
+  }
+
+
+  .infoContainer {
+    position: relative;
+    z-index: 1;
+    color: white;
+
+    .type {
+      font-size: 0.875rem;
+      font-weight: 400;
+      text-transform: capitalize;
+    }
+  }
+
   &.paddingSmall {
     padding: 16px;
   }
