--- a/src/index.scss
+++ b/src/index.scss
@@ -51,3 +51,15 @@ html {
 
   --like-button-size: 32px;
 }
+
+.explicit {
+  border-radius: 2px;
+  background-color: hsla(0,0%,100%,.6);
+  font-size: 9px;
+  height: 16px;
+  width: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #121212;
+}
