Added episode page, improved show page

--- a/src/components/AppFooter/AppFooter.module.scss
+++ b/src/components/AppFooter/AppFooter.module.scss
@@ -1,4 +1,32 @@
 .appFooter {
-  grid-column-start: 1;
-  grid-column-end: 3;
+  padding: 40px 24px 24px;
+
+  .navContainer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+
+    .col {
+      width: 200px;
+      margin-bottom: 32px;
+
+      .title {
+        color: white;
+        font-weight: 700;
+        margin-bottom: 8px;
+      }
+
+      a {
+        display: block;
+        margin-bottom: 8px;
+        color: #a7a7a7;
+        line-height: 1.5;
+
+        &:hover {
+          color: white;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
 }
