--- a/src/components/AppPlayer/AppPlayer.module.scss
+++ b/src/components/AppPlayer/AppPlayer.module.scss
@@ -1,8 +1,7 @@
 .appPlayer {
   height: 72px;
   width: 100%;
-  grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column: 1/-1;
   display: flex;
   position: relative;
   align-items: center;
