--- a/src/components/AppPlayer/PlayerLeftSection/PlayerLeftSection.module.scss
+++ b/src/components/AppPlayer/PlayerLeftSection/PlayerLeftSection.module.scss
@@ -6,6 +6,7 @@
   min-width: 180px;
 
   .imageContainer {
+    position: relative;
     width: 56px;
     height: 56px;
     overflow: hidden;
@@ -18,6 +19,37 @@
       height: 100%;
       object-position: center;
       object-fit: cover;
+    }
+
+    .sidebarToggleButton {
+      width: 24px;
+      height: 24px;
+      background-color: rgba(0,0,0,.7);
+      border-radius: 50%;
+      position: absolute;
+      top: 4px;
+      right: 4px;
+      z-index: 1;
+      opacity: 0;
+
+      svg {
+        fill: #b3b3b3;
+      }
+
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+        transform: scale(1.1);
+
+        svg {
+          fill: white;
+        }
+      }
+    }
+
+    &:hover {
+      .sidebarToggleButton {
+        opacity: 1;
+      }
     }
   }
 
