--- a/src/layouts/MainLayout/MainLayout.module.scss
+++ b/src/layouts/MainLayout/MainLayout.module.scss
@@ -15,6 +15,10 @@
     column-gap: 8px;
     row-gap: 8px;
 
+    &.extendedGrid {
+      grid-template-columns: auto 1fr auto;
+    }
+
     .scrollContainer {
       position: relative;
       background-color: #121212;
@@ -28,6 +32,13 @@
 
       .scroll {
         height: 100%;
+
+        .wrapper {
+          display: flex;
+          flex-direction: column;
+          align-items: stretch;
+          min-height: calc(100%);
+        }
       }
     }
   }
