Added Track page and fixed minor bugs

--- a/src/components/TrackList/TrackList.module.scss
+++ b/src/components/TrackList/TrackList.module.scss
@@ -396,4 +396,12 @@
       }
     }
   }
+
+  &.searchResults {
+    .listBody {
+      .trackItem {
+        padding-left: 8px;
+      }
+    }
+  }
 }
