--- a/src/components/EntityHeaderWrapper/EntityHeaderWrapper.module.scss
+++ b/src/components/EntityHeaderWrapper/EntityHeaderWrapper.module.scss
@@ -5,6 +5,7 @@
   height: 30vh;
   max-height: 400px;
   min-height: 340px;
+  color: white;
 
   .imageContainer {
     width: 232px;
@@ -14,14 +15,29 @@
     position: relative;
     z-index: 1;
     flex-shrink: 0;
-    border-radius: 50%;
     overflow: hidden;
+    background-color: #282828;
+    border-radius: 4px;
 
     img {
       width: 100%;
       height: 100%;
       object-position: center;
       object-fit: cover;
+    }
+
+    svg {
+      fill: #7f7f7f;
+      width: 64px;
+      height: 64px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    &.rounded {
+      border-radius: 50%;
     }
   }
 
