--- a/src/components/TrackList/TrackList.module.scss
+++ b/src/components/TrackList/TrackList.module.scss
@@ -343,6 +343,11 @@
             fill: #a7a7a7;
           }
         }
+
+        p {
+          width: 36px;
+          margin-left: 24px;
+        }
       }
     }
   }
