--- a/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarList.module.scss
+++ b/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarList.module.scss
@@ -14,6 +14,8 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      margin-bottom: 8px;
+      padding-inline: 8px;
     }
   }
 }
