Added search to popup component

--- a/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarList.module.scss
+++ b/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarList.module.scss
@@ -16,6 +16,10 @@
       justify-content: space-between;
       margin-bottom: 8px;
       padding-inline: 8px;
+
+      .searchContainer {
+        max-width: 180px;
+      }
     }
   }
 }
