--- a/src/components/AddTrackToPlaylistPopup/AddTrackToPlaylistPopup.module.scss
+++ b/src/components/AddTrackToPlaylistPopup/AddTrackToPlaylistPopup.module.scss
@@ -30,6 +30,7 @@
       color: white;
       border-bottom: 1px solid #333;
       border-radius: 4px;
+      margin-top: 2px;
 
       &:hover {
         background-color: #1a1a1a;
