--- a/src/components/AppSidebar/SidebarLibrary/EntitySearchInput/EntitySearchInput.module.scss
+++ b/src/components/AppSidebar/SidebarLibrary/EntitySearchInput/EntitySearchInput.module.scss
@@ -1,4 +1,4 @@
-.sidebarSearchInput {
+.searchInput {
   flex-shrink: 0;
   position: relative;
   height: 32px;
@@ -59,10 +59,10 @@
 
     input {
       left: 0;
-      width: 180px;
       visibility: visible;
       opacity: 1;
       pointer-events: all;
+      width: 100%;
     }
   }
 }
