--- a/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarListView/SidebarListView.module.scss
+++ b/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarListView/SidebarListView.module.scss
@@ -1,5 +1,5 @@
 .sidebarListView {
-  .item {
+  a {
     border-radius: 4px;
     display: flex;
     gap: 8px 12px;
@@ -36,6 +36,14 @@
 
     &:hover {
       background-color: #1a1a1a;
+    }
+
+    &.active {
+      background-color: hsla(0, 0%, 100%, 0.07);
+
+      &:hover {
+        background-color: hsla(0, 0%, 100%, 0.1);
+      }
     }
   }
 }
