Created user profile page

--- a/src/components/Common/EntityImage/EntityImage.module.scss
+++ b/src/components/Common/EntityImage/EntityImage.module.scss
@@ -15,6 +15,11 @@
 
   svg {
     fill: #b3b3b3;
+    // TODO fix this and EntityCard
+    //position: absolute;
+    //top: 50%;
+    //left: 50%;
+    //transform: translate(-50%, -50%);
   }
 
   img {
