--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -1,38 +1,3 @@
-//@font-face {
-//  font-family: "Regular";
-//  src: url("/fonts/regular.woff2") format("woff");
-//}
-//
-//@font-face {
-//  font-family: "Bold";
-//  src: url("/fonts/bold.woff2") format("woff");
-//}
-//
-//@font-face {
-//  font-family: "Light";
-//  src: url("/fonts/light.woff2") format("woff");
-//}
-//
-//@font-face {
-//  font-family: "Black";
-//  src: url("/fonts/black.woff2") format("woff");
-//}
-//
-//@font-face {
-//  font-family: "SpotIcon";
-//  src: url("/fonts/spoticons.woff2") format("woff");
-//}
-
-
-//@font-face {
-//  font-family: spotify-circular;
-//  src: url(https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Light.afd9ab26.woff2) format("woff2"),url(https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Light.2a78c017.woff) format("woff"),url(https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Light.89e4be2e.ttf) format("truetype");
-//  //src: url("/fonts/light.woff2") format("woff");
-//  font-weight: 200;
-//  font-style: normal;
-//  font-display: swap
-//}
-
 @font-face {
   font-family: spotify-circular;
   src: url(https://encore.scdn.co/fonts/CircularSp-Book-4eaffdf96f4c6f984686e93d5d9cb325.woff2) format("woff2");
@@ -53,11 +18,12 @@
   font-display: swap
 }
 
-//@font-face {
-//  font-family: spotify-circular;
-//  src: url(https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Black.c21e63c5.woff2) format("woff2"),url(https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Black.effa986f.woff) format("woff"),url(https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Black.ce8ef887.ttf) format("truetype");
-//  //src: url("/fonts/black.woff2") format("woff");
-//  font-weight: 900;
-//  font-style: normal;
-//  font-display: swap
-//}
+@font-face {
+  font-family: spotify-circular;
+  src: url("https://encore.scdn.co/fonts/CircularSpTitle-Black-4588c99025b967475c31695b0743dd1a.woff2");
+  //src: url(https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Black.c21e63c5.woff2) format("woff2"),url(https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Black.effa986f.woff) format("woff"),url(https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Black.ce8ef887.ttf) format("truetype");
+  //src: url("/fonts/black.woff2") format("woff");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap
+}
