--- a/src/modules/user/User.module.scss
+++ b/src/modules/user/User.module.scss
@@ -3,5 +3,8 @@
     padding: 24px;
     position: relative;
     z-index: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
   }
 }
