--- a/src/components/ContextMenu/ContextMenu.module.scss
+++ b/src/components/ContextMenu/ContextMenu.module.scss
@@ -13,6 +13,7 @@
   max-width: 350px;
   min-width: 160px;
   padding: 4px;
+  box-shadow: 0 16px 24px rgba(0,0,0,.3),0 6px 8px rgba(0,0,0,.2);
 
   .section {
     border-top: 1px solid hsla(0,0%,100%,.1);
