--- a/src/components/EntityCard/EntityCard.module.scss
+++ b/src/components/EntityCard/EntityCard.module.scss
@@ -45,6 +45,11 @@
       transform: translateY(15%);
       opacity: 0;
       transition: 0.3s ease;
+
+      &.active {
+        opacity: 1;
+        transform: translateY(-0);
+      }
     }
   }
 
