Added playback indicators do sidebar items

--- a/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarListView/SidebarListView.module.scss
+++ b/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarListView/SidebarListView.module.scss
@@ -45,5 +45,13 @@
         background-color: hsla(0, 0%, 100%, 0.1);
       }
     }
+
+    &.playback {
+      .infoContainer {
+        .title {
+          color: #1ed760;
+        }
+      }
+    }
   }
 }
