--- a/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarCompactView/SidebarCompactView.module.scss
+++ b/src/components/AppSidebar/SidebarLibrary/SidebarList/SidebarCompactView/SidebarCompactView.module.scss
@@ -1,5 +1,5 @@
 .sidebarCompactView {
-  .item {
+  a {
     padding: 0 8px;
     height: 32px;
     display: flex;
@@ -15,6 +15,20 @@
 
     &:hover {
       background-color: #1a1a1a;
+    }
+
+    &.active {
+      background-color: hsla(0, 0%, 100%, 0.07);
+
+      &:hover {
+        background-color: hsla(0, 0%, 100%, 0.1);
+      }
+    }
+
+    &.playback {
+      .title {
+        color: #1ed760;
+      }
     }
   }
 }
